--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,15 +5,33 @@
     android:id="@+id/parent"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".MainActivity"
+    android:background="@color/green">
+
+
+    <ImageView
+        android:id="@+id/googleView"
+        android:layout_width="48dp"
+        android:layout_height="47dp"
+
+        android:layout_marginStart="7dp"
+        android:layout_marginTop="12dp"
+        android:background="@drawable/rounded_corner"
+        app:srcCompat="?android:attr/actionModeWebSearchDrawable" />
 
     <RelativeLayout
         android:id="@+id/input_fields"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="10dp"
+        android:layout_marginStart="60dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginBottom="10dp"
         android:background="@drawable/rounded_corner"
-        android:padding="8dp">
+
+        android:paddingHorizontal="8dp"
+        android:paddingTop="13dp"
+        android:paddingBottom="13dp">
 
         <ImageView
             android:id="@+id/link_icon"
@@ -52,7 +70,8 @@
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:layout_below="@id/input_fields"
-        android:background="#E1E1E1" />
+        android:background="#E1E1E1"
+        android:visibility="invisible"/>
 
 
     <ProgressBar
@@ -63,22 +82,24 @@
         android:layout_below="@id/input_fields"
         android:visibility="invisible" />
 
-
+!!!!
     <WebView
         android:id="@+id/web_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_above="@id/divider_2"
-        android:layout_below="@id/divider_1" />
-
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="50sp"
         android:layout_below="@id/divider_1"
-        android:text="Liber"
-        android:gravity="center"
-        android:textSize="30sp"
-        android:id="@+id/liber"/>
+        android:visibility="invisible">
+
+        <Button
+            android:id="@+id/button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_x="4dp"
+            android:layout_y="-134dp"
+            android:text="Button" />
+    </WebView>
+!!!!
 
         />
     <ScrollView
@@ -86,9 +107,11 @@
         android:layout_height="match_parent"
         android:id="@+id/scrollik"
         android:scrollbars="none"
+        android:paddingTop="10dp"
         android:layout_above="@id/divider_2"
-        android:layout_below="@id/liber"
-        android:visibility="invisible">
+        android:layout_below="@id/input_fields"
+        android:visibility="visible"
+        android:background="@drawable/scroll">
 
         <LinearLayout
             android:id="@+id/link_arr"
@@ -109,16 +132,18 @@
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:layout_above="@id/bottom_layout"
-        android:background="#E1E1E1" />
+        android:background="#E1E1E1"
+        android:visibility="invisible"/>
 
     <LinearLayout
         android:id="@+id/bottom_layout"
         android:layout_width="match_parent"
         android:layout_height="48dp"
         android:layout_alignParentBottom="true"
-        android:background="#F3F3F3"
         android:gravity="center"
-        android:orientation="horizontal">
+        android:background="@color/green"
+        android:orientation="horizontal"
+        >
 
         <ImageView
             android:id="@+id/web_back"
@@ -127,7 +152,8 @@
             android:layout_weight="1"
             android:background="?attr/selectableItemBackgroundBorderless"
             android:padding="10dp"
-            android:src="@drawable/baseline_arrow_back_24" />
+            android:src="@drawable/baseline_arrow_back_24"
+            />
 
         <ImageView
             android:id="@+id/web_forward"
